--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
   </div>
 
   <script type="module" src="/src/js/main.js"></script>
+  <script type="module" src="/src/js/sendTg.js"></script>
 </body>
 
 </html>
