--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="UTF-8" />
 
+  <meta name="google-site-verification" content="_YlznBvZLKAuvwjfd2q_lvjY56OM5F9vX6BIVjv4Fgw" />
+
   <link rel="icon" type="image/x-icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
