--- a/index.html
+++ b/index.html
@@ -17,7 +17,19 @@
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css">
 
-  <title>Евакуатор</title>
+  <title>Евакуатор 24/7 – Швидка допомога на дорозі</title>
+
+  <meta name="description" content="Швидкий і надійний евакуатор по місту та області. Працюємо 24/7." />
+  <meta name="keywords"
+    content="евакуатор, евакуатор Дніро, автоевакуатор, техдопомога на дорозі, евакуація авто, евакуатор по Україні" />
+  <meta name="author" content="Dyadya Maks Evakuator Service" />
+
+  <!-- Open Graph для соцмереж -->
+  <meta property="og:title" content="Евакуатор 24/7 – Швидка допомога на дорозі" />
+  <meta property="og:description" content="Надійний евакуатор у Вашому місті. Працюємо цілодобово." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://www.dyadya-maks-evak.dp.ua" />
+  <meta property="og:image" content="https://www.dyadya-maks-evak.dp.ua/og-image.jpg" />
 </head>
 
 <body>
